--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"start": "nodemon -r dotenv/config server/app.js",
 		"debug": "npm start -- --inspect=0.0.0.0:9229",
 		"test:debug": "npm run test-dev --  --inspect-brk",
-		"test": "CONSOLE_LOG_LEVEL=error nyc mocha -- \"+(server|test)/**/*.spec.js\"",
-		"test-dev": "CONSOLE_LOG_LEVEL=error NODE_ENV=test mocha --require dotenv/config 'test/**/*.spec.js'",
+		"test": "CONSOLE_LOG_LEVEL=error nyc mocha -- 'test/v1/*.spec.js' 'test/*.spec.js' 'test/lib/*.spec.js'",
+		"test-dev": "CONSOLE_LOG_LEVEL=error NODE_ENV=test mocha --require dotenv/config 'test/v1/*.spec.js' 'test/*.spec.js' 'test/lib/*.spec.js'",
 		"init-db": "node -r dotenv/config server/init-db.js",
 		"docker:test": "docker-compose exec \"$npm_package_short\" sh -c 'npm run test'",
 		"vault:read": "vault read --format json  /secret/teams/$npm_package_team/$npm_package_name/development",
@@ -80,6 +80,7 @@
 		"js-yaml": "^3.12.0",
 		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
+		"lodash.uniqby": "^4.7.0",
 		"neo4j-driver": "~1.6.1",
 		"neo4j-graphql-js": "~0.1.28",
 		"sinon": "^6.2.0",
@@ -98,6 +99,7 @@
 		"eslint-plugin-prettier": "~2.6.1",
 		"faker": "^4.1.0",
 		"husky": "^0.14.3",
+		"jest": "^23.6.0",
 		"mocha": "^5.1.1",
 		"nodemon": "^1.17.4",
 		"nyc": "^11.8.0",
