--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
   },
   "homepage": "https://github.com/Financial-Times/biz-ops-schema#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
     "eslint": "^5.5.0",
     "eslint-config-origami-component": "^1.0.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "jest": "^23.6.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.14.2",
-    "sinon": "^6.1.5",
-    "sinon-chai": "^3.2.0"
+    "prettier": "^1.14.2"
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
