--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -52,6 +52,7 @@ properties:
     description: Repository description field
     autoPopulated: true
   mostRecentCircleCIPlatform:
+    deprecationReason: This information was useful during migration of circleci. Now deprecated in favour of modelling CI in general at some point
     type: CircleCiVersion
     canFilter: true
     label: CircleCI version
