--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -4,6 +4,13 @@ CircleCiVersion:
     # because enum values cannot begin with a number in graphQL
     ONE: '1.0'
     TWO: '2.0'
+ProcessType:
+  description: The type of process being used to achieve the result
+  options:
+    - Automatic
+    - Manual
+    - None
+    - ThirdParty
 SystemLifecycle:
   description: |
     The lifecycle stage of a system.
