--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -135,7 +135,7 @@ properties:
   failoverActions:
     type: Document
     label: Failover Actions
-    description: The actions require to fail the system from one region to another
+    description: The actions require to fail the system from one region to another. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: failover
   dataRecoveryCapability:
     type: Capability
@@ -146,7 +146,7 @@ properties:
   dataRecoveryActions:
     type: Document
     label: Data Recovery Actions
-    description: The actions require to restore the data for the system
+    description: The actions require to restore the data for the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: dataRecovery
   releaseCapabiity:
     type: Capability
@@ -157,7 +157,7 @@ properties:
   releaseProcess:
     type: Document
     label: Release Process
-    description: The actions require to deploy a new version of the system
+    description: The actions require to deploy a new version of the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: release
   credentialsRefreshCapability:
     type: Capability
@@ -168,7 +168,7 @@ properties:
   credentialsRefreshActions:
     type: Document
     label: Credentials Refresh Actions
-    description: The actions require to chage the credentials used by the system
+    description: The actions require to chage the credentials used by the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: credentialRefresh
   moreInformation:
     type: Document
