--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -6,16 +6,19 @@ properties:
     required: true
     unique: true
     canIdentify: true
+    isCore: true
     pattern: STRICT_CODE
     label: Code
     description: 'Unique code/id for this item'
   name:
     type: Word
     canIdentify: true
+    isCore: true
     label: Name
     description: The name of the group
   description:
     type: Paragraph
+    isCore: true
     label: Description
     description: What the group does
   isActive:
