--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -7,6 +7,7 @@ properties:
     required: true
     unique: true
     canIdentify: true
+    isCore: true
     label: Code
     description: 'Unique code/id for this person'
     fieldset: general
@@ -14,6 +15,7 @@ properties:
   name:
     type: Word
     canIdentify: true
+    isCore: true
     label: Name
     description: The name of the person
     fieldset: general
@@ -21,6 +23,7 @@ properties:
   email:
     type: Word
     canIdentify: true
+    isCore: true
     label: Email
     description: The email address of the person
     fieldset: contact
@@ -29,6 +32,7 @@ properties:
     type: Word
     label: Slack
     canIdentify: true
+    isCore: true
     description: The slack link for the person (deprecated)
     fieldset: contact
     autoPopulated: true
@@ -49,6 +53,7 @@ properties:
   phone:
     type: Word
     canIdentify: true
+    isCore: true
     label: Phone
     description: The phone contact number for the person
     fieldset: contact
