--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -6,30 +6,35 @@ properties:
     required: true
     unique: true
     canIdentify: true
+    isCore: true
     pattern: STRICT_CODE
     label: Code
     description: 'Unique code/id for this item'
     fieldset: general
   description:
     type: Paragraph
+    isCore: true
     label: Description
     description: Brief description of what the product does
     fieldset: general
   name:
     type: Word
     canIdentify: true
+    isCore: true
     label: Name
     description: The name generally used to refer to the product
     fieldset: general
   serviceTier:
     type: ServiceTier
     canFilter: true
+    isCore: true
     label: Service tier
     description: The product's service tier level
     fieldset: general
   primaryURL:
     type: Url
     canIdentify: true
+    isCore: true
     label: Primary URL
     description: The main url the product is served on
     fieldset: general
