--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -6,6 +6,7 @@ properties:
     required: true
     unique: true
     canIdentify: true
+    isCore: true
     pattern: NO_SPACES
     label: Code
     description: 'Unique code/id for this item'
@@ -13,30 +14,35 @@ properties:
   name:
     type: Word
     canIdentify: true
+    isCore: true
     label: Name
     description: The team's name
     fieldset: general
   description:
     type: Paragraph
     canIdentify: true
+    isCore: true
     label: Description
     description: Description of the team
     fieldset: general
   email:
     type: Word
     canIdentify: true
+    isCore: true
     label: Email
     description: The team's email address
     fieldset: general
   slack:
     type: Word
     canIdentify: true
+    isCore: true
     label: Slack
     description: The team's slack contact address
     fieldset: general
   phone:
     type: Word
     canIdentify: true
+    isCore: true
     label: Phone
     description: The team's phone contact number
     fieldset: general
@@ -54,6 +60,7 @@ properties:
     fieldset: general
   supportRota:
     type: Url
+    isCore: true
     label: Support rota
     description: Url linking to details of the system's support rota
     fieldset: general
