Explicit types for Code and Name, and Email and Slack, to enable those types to be associated with different output formats.

--- a/schema/types/CostCentre.yaml
+++ b/schema/types/CostCentre.yaml
@@ -2,7 +2,7 @@ name: CostCentre
 description: A cost centre which groups are costed to
 properties:
   code:
-    type: Word
+    type: Code
     required: true
     unique: true
     canIdentify: true
@@ -11,7 +11,7 @@ properties:
     description: 'Unique code/id for this item'
     pattern: NO_LOWER_CASE
   name:
-    type: Word
+    type: Name
     canIdentify: true
     isCore: true
     label: Name
