--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -3,7 +3,7 @@ pluralName: Repositories
 description: A source code repository
 properties:
   code:
-    type: Word
+    type: Code
     required: true
     unique: true
     pattern: REPO_NAME # can't find any published rules on github repo names, so must be loose
@@ -12,7 +12,7 @@ properties:
     label: Code
     description: 'Unique code/id for this item'
   name:
-    type: Word
+    type: Name
     isCore: true
     label: Name
     description: Display Name
@@ -39,12 +39,14 @@ properties:
   isPrivate:
     type: Boolean
     canFilter: true
+    isCore: true
     label: Private
     description: Is the repository private
     autoPopulated: true
   isArchived:
     type: Boolean
     canFilter: true
+    isCore: true
     label: Archived
     description: Is the repository archived
     autoPopulated: true
