Revert slack to a word as there are many slack fields - slack id, slack channel etc.

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -29,7 +29,7 @@ properties:
     fieldset: contact
     autoPopulated: true
   slack:
-    type: Slack
+    type: Word
     label: Slack
     canIdentify: true
     isCore: true
