--- a/schema/types/CostCentre.yaml
+++ b/schema/types/CostCentre.yaml
@@ -7,18 +7,18 @@ properties:
     unique: true
     canIdentify: true
     label: Code
-    description: 'Unique code/id for this item'
+    description: 'Unique code/id for this item.'
     pattern: PERMISSIVE
   name:
     type: Word
     canIdentify: true
     label: Name
-    description: The name of the cost centre
+    description: The name of the cost centre.
   groups:
     relationship: PAYS_FOR
     type: Group
     direction: outgoing
     hasMany: true
     label: FT Group
-    description: The groups which are costed to the cost centre
+    description: The groups which are costed to the cost centre.
 
