--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -8,43 +8,43 @@ properties:
     canIdentify: true
     pattern: STRICT_CODE
     label: Code
-    description: 'Unique code/id for this item'
+    description: 'Unique code/id for this item.'
     fieldset: general
   description:
     type: Paragraph
     label: Description
-    description: Brief description of what the product does
+    description: Brief description of what the product does.
     fieldset: general
   name:
     type: Word
     canIdentify: true
     label: Name
-    description: The name generally used to refer to the product
+    description: The name generally used to refer to the product.
     fieldset: general
   serviceTier:
     type: ServiceTier
     canFilter: true
     label: Service tier
-    description: The product's service tier level
+    description: The product's service tier level.
     fieldset: general
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
-    description: The main url the product is served on
+    description: The main url the product is served on.
     fieldset: general
   lifecycleStage:
     type: ProductLifecycle
     canFilter: true
     label: Lifecycle stage
-    description: Lifecycle stage of the product
+    description: Lifecycle stage of the product.
     fieldset: general
   productOwners:
     type: Person
     direction: outgoing
     label: Product owners
     relationship: HAS_PRODUCT_OWNER
-    description: The product's owner
+    description: The product's owner.
     hasMany: true
     fieldset: network
   dependencies:
@@ -52,7 +52,7 @@ properties:
     direction: outgoing
     label: Direct dependencies
     relationship: DEPENDS_ON
-    description: The systems the product directly depends on
+    description: The systems the product directly depends on.
     hasMany: true
     fieldset: network
   recursiveDependencies:
@@ -60,7 +60,7 @@ properties:
     direction: outgoing
     label: Recursive dependencies
     relationship: DEPENDS_ON
-    description: 'The systems the product depends on, either directly or indirectly'
+    description: 'The systems the product depends on, either directly or indirectly.'
     hasMany: true
     isRecursive: true
     fieldset: network
@@ -70,7 +70,7 @@ properties:
     type: Product
     relationship: DEPENDS_ON
     direction: outgoing
-    description: Products that this product depends on
+    description: Products that this product depends on.
     label: Product dependencies
     fieldset: network
   productDependents:
@@ -79,7 +79,7 @@ properties:
     type: Product
     relationship: DEPENDS_ON
     direction: incoming
-    description: Products that depend on this product
+    description: Products that depend on this product.
     label: Product dependents
     fieldset: network
 fieldsets:
