--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -9,50 +9,50 @@ properties:
     pattern: CODE
     label: Code
     fieldset: general
-    description: Unique code/id for this item. Once created it should (in most cases) never be altered
+    description: Unique code/id for this item. Once created it should (in most cases) never be altered.
   name:
     type: Word
     canIdentify: true
     label: Name
-    description: Display name of the system
+    description: Display name of the system.
     fieldset: general
   description:
     type: Paragraph
     canIdentify: true
     label: Description
-    description: Brief overview of what the system does and how
+    description: Brief overview of what the system does and how.
     fieldset: general
   primaryURL:
     type: Url
     canIdentify: true
     label: Primary URL
-    description: The main url served by the system
+    description: The main url served by the system.
     fieldset: general
   systemType:
     type: Word
     canFilter: true
     label: System type
-    description: The system type (don't worry about entering anything here)
+    description: The system type (don't worry about entering anything here).
     deprecationReason: 'Was never used or populated'
     fieldset: general
   serviceTier:
     type: ServiceTier
     canFilter: true
     label: Service tier
-    description: The system's service tier level
+    description: The system's service tier level.
     fieldset: general
   serviceType:
     type: Word
     canFilter: true
     label: Service type
-    description: The type of service the system provides  (don't worry about entering anything here)
+    description: The type of service the system provides  (don't worry about entering anything here).
     deprecationReason: 'Was never used or populated'
     fieldset: general
   hostPlatform:
     type: Word
     canFilter: true
     label: Host platform
-    description: The platform the service is hosted on, e.g. Heroku
+    description: The platform the service is hosted on, e.g. Heroku.
     fieldset: general
   containsPersonalData:
     type: Boolean
@@ -66,7 +66,7 @@ properties:
       (e.g. IP Address, cookies, MAC Addresses, pixel tags, account handles,
       device finger prints, username and passwords), government identifiers
       (e.g. passport, drivers license), signatures, workplace data (e.g.
-      salary/bonus/annual reviews), gender, date of birth
+      salary/bonus/annual reviews), gender, date of birth.
     fieldset: risk
   containsSensitiveData:
     type: Boolean
@@ -80,7 +80,7 @@ properties:
       about children (under 16 years or age) and payment card information
       in this category.
       For more details, see the Information Commissioner's definition:
-      https://ico.org.uk/for-organisations/guide-to-the-general-data-protection-regulation-gdpr/what-is-personal-data/what-is-personal-data/
+      https://ico.org.uk/for-organisations/guide-to-the-general-data-protection-regulation-gdpr/what-is-personal-data/what-is-personal-data/.
     fieldset: risk
   canDownloadPersonalData:
     type: Boolean
@@ -97,90 +97,90 @@ properties:
   risk:
     type: Paragraph
     label: Data risk
-    description: More details of what kind of data is held/processesed in this system, and what the associated risks are
+    description: More details of what kind of data is held/processesed in this system, and what the associated risks are.
     fieldset: risk
   lifecycleStage:
     type: SystemLifecycle
     canFilter: true
     label: Lifecycle stage
-    description: The system lifecycle stage of the system
+    description: The system lifecycle stage of the system.
     fieldset: general
   SF_ID:
     type: Word
     canFilter: true
     label: Salesforce ID
-    description: ID of the system in salesforce **DO NOT EDIT**
+    description: ID of the system in salesforce **DO NOT EDIT**.
     autoPopulated: true
   architectureDiagram:
     type: Document
     label: Architecture Diagram
-    description: A diagram of the system's architecture (either a link to one or embedded directly)
+    description: A diagram of the system's architecture (either a link to one or embedded directly).
     fieldset: self
   troubleshooting:
     type: Document
     label: Troubleshooting
-    description: Guidance for troubleshooting problems with the system
+    description: Guidance for troubleshooting problems with the system.
     fieldset: self
   monitoring:
     type: Document
     label: Bespoke Monitoring
-    description: Details of any monitoring the system has
+    description: Details of any monitoring the system has.
     fieldset: monitoring
   failoverCapability:
     type: Capability
     canFilter: true
     label: Failover Capability
-    description: The mechanism used to achieve a failover
+    description: The mechanism used to achieve a failover.
     fieldset: failover
   failoverActions:
     type: Document
     label: Failover Actions
-    description: The actions require to fail the system from one region to another. Either provide a set of numbered steps or a link to a detailed process that operations can follow
+    description: The actions require to fail the system from one region to another. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: failover
   dataRecoveryCapability:
     type: Capability
     canFilter: true
     label: Data Recovery Capability
-    description: The mechanism used to achieve a data recovery
+    description: The mechanism used to achieve a data recovery.
     fieldset: dataRecovery
   dataRecoveryActions:
     type: Document
     label: Data Recovery Actions
-    description: The actions require to restore the data for the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow
+    description: The actions require to restore the data for the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: dataRecovery
   releaseCapabiity:
     type: Capability
     canFilter: true
     label: Release Process Capability
-    description: The mechanism used to achieve a release
+    description: The mechanism used to achieve a release.
     fieldset: release
   releaseProcess:
     type: Document
     label: Release Process
-    description: The actions require to deploy a new version of the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow
+    description: The actions require to deploy a new version of the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: release
   credentialsRefreshCapability:
     type: Capability
     canFilter: true
     label: Credentials Refresh Capability
-    description: The mechanism used to achieve a change in credentials
+    description: The mechanism used to achieve a change in credentials.
     fieldset: credentialRefresh
   credentialsRefreshActions:
     type: Document
     label: Credentials Refresh Actions
-    description: The actions require to change the credentials used by the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow
+    description: The actions require to change the credentials used by the system. Either provide a set of numbered steps or a link to a detailed process that operations can follow.
     fieldset: credentialRefresh
   moreInformation:
     type: Document
     label: More Information
-    description: Any additional information about the system
+    description: Any additional information about the system.
     fieldset: self
   stakeholders:
     type: Person
     direction: outgoing
     label: Stakeholders
     relationship: HAS_STAKEHOLDER
-    description: The system's stakeholders
+    description: The system's stakeholders.
     fieldset: ownership
     hasMany: true
   repositories:
@@ -189,7 +189,7 @@ properties:
     label: Repositories
     relationship: HAS_REPO
     fieldset: network
-    description: The repositories which store the system's source code
+    description: The repositories which store the system's source code.
     hasMany: true
   monitoredBy:
     type: Healthcheck
@@ -197,14 +197,14 @@ properties:
     label: Monitored by
     relationship: MONITORED_BY
     deprecationReason: 'Replaced by healthchecks property'
-    description: Endpoints which monitor this system
+    description: Endpoints which monitor this system.
     hasMany: true
   healthchecks:
     type: Healthcheck
     direction: outgoing
     label: Healthchecks
     relationship: MONITORED_BY
-    description: Healthchecks which are used to monitor this system
+    description: Healthchecks which are used to monitor this system.
     hasMany: true
     fieldset: monitoring
   deliveredBy:
@@ -212,21 +212,21 @@ properties:
     direction: outgoing
     label: Delivered by team
     relationship: DELIVERED_BY
-    description: The team which delivers the system
+    description: The team which delivers the system.
     fieldset: ownership
   supportedBy:
     type: Team
     direction: outgoing
     label: Supported by team
     relationship: SUPPORTED_BY
-    description: The team which supports the system
+    description: The team which supports the system.
     fieldset: ownership
   knownAboutBy:
     type: Person
     direction: outgoing
     label: Known about by
     relationship: KNOWN_ABOUT_BY
-    description: People who know about the system
+    description: People who know about the system.
     fieldset: ownership
     hasMany: true
   dependencies:
@@ -234,7 +234,7 @@ properties:
     direction: outgoing
     label: Dependencies
     relationship: DEPENDS_ON
-    description: The other systems the system directly depends on
+    description: The other systems the system directly depends on.
     hasMany: true
     fieldset: network
   recursiveDependencies:
@@ -242,7 +242,7 @@ properties:
     direction: outgoing
     label: Recursive dependencies
     relationship: DEPENDS_ON
-    description: 'The other systems the system depends on, either directly or indirectly'
+    description: 'The other systems the system depends on, either directly or indirectly.'
     hasMany: true
     isRecursive: true
     fieldset: network
@@ -251,7 +251,7 @@ properties:
     direction: incoming
     label: Dependents
     relationship: DEPENDS_ON
-    description: The other systems which directly depend on this system
+    description: The other systems which directly depend on this system.
     hasMany: true
     fieldset: network
   recursiveDependents:
@@ -261,7 +261,7 @@ properties:
     relationship: DEPENDS_ON
     description: >-
       The other systems which depend on this system, either directly or
-      indirectly
+      indirectly.
     hasMany: true
     isRecursive: true
     fieldset: network
@@ -270,7 +270,7 @@ properties:
     direction: incoming
     label: Dependent products
     relationship: DEPENDS_ON
-    description: Products which depend on this system
+    description: Products which depend on this system.
     hasMany: true
     fieldset: network
   recursiveDependentProducts:
@@ -278,7 +278,7 @@ properties:
     direction: incoming
     label: Recursive dependent products
     relationship: DEPENDS_ON
-    description: 'The products which depend on this system, either directly or indirectly'
+    description: 'The products which depend on this system, either directly or indirectly.'
     hasMany: true
     isRecursive: true
     fieldset: network
@@ -287,7 +287,7 @@ properties:
     direction: incoming
     label: Repositories
     relationship: STORED_IN
-    description: 'If the system is a VCS, the repositories it stores'
+    description: 'If the system is a VCS, the repositories it stores.'
     deprecationReason: 'Of little value to model as a relationship; repositories will have a property on them detailing whether they are stored in bitbucket or github'
     hasMany: true
     fieldset: network
@@ -296,7 +296,7 @@ properties:
     direction: outgoing
     label: Replaces systems
     relationship: REPLACES
-    description: System(s) that are, or will be, replaced, at least in part, by this system
+    description: System(s) that are, or will be, replaced, at least in part, by this system.
     hasMany: true
     fieldset: network
   replacedBy:
@@ -304,7 +304,7 @@ properties:
     direction: incoming
     label: Replaced by systems
     relationship: REPLACES
-    description: System(s) that do, or will, replace all or part of this system
+    description: System(s) that do, or will, replace all or part of this system.
     hasMany: true
     fieldset: network
 fieldsets:
