--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -8,66 +8,66 @@ properties:
     canIdentify: true
     pattern: NO_SPACES
     label: Code
-    description: 'Unique code/id for this item'
+    description: 'Unique code/id for this item.'
     fieldset: general
   name:
     type: Word
     canIdentify: true
     label: Name
-    description: The team's name
+    description: The team's name.
     fieldset: general
   description:
     type: Paragraph
     canIdentify: true
     label: Description
-    description: Description of the team
+    description: Description of the team.
     fieldset: general
   email:
     type: Word
     canIdentify: true
     label: Email
-    description: The team's email address
+    description: The team's email address.
     fieldset: general
   slack:
     type: Word
     canIdentify: true
     label: Slack
-    description: The team's slack contact address
+    description: The team's slack contact address.
     fieldset: general
   phone:
     type: Word
     canIdentify: true
     label: Phone
-    description: The team's phone contact number
+    description: The team's phone contact number.
     fieldset: general
   isActive:
     type: Boolean
     canFilter: true
     label: Active
-    description: Whether or not the team is still in existence
+    description: Whether or not the team is still in existence.
     fieldset: general
   isThirdParty:
     type: Boolean
     canFilter: true
     label: Third party
-    description: Whether or not the team is a supplier
+    description: Whether or not the team is a supplier.
     fieldset: general
   supportRota:
     type: Url
     label: Support rota
-    description: Url linking to details of the system's support rota
+    description: Url linking to details of the system's support rota.
     fieldset: general
   contactPref:
     type: Word
     label: Preferred contact method
-    description: Preferred contact method
+    description: Preferred contact method.
     fieldset: general
   techLeads:
     type: Person
     direction: outgoing
     label: Tech leads
     relationship: HAS_TECH_LEAD
-    description: The tech leads of the team
+    description: The tech leads of the team.
     hasMany: true
     fieldset: people
   productOwners:
@@ -75,7 +75,7 @@ properties:
     direction: outgoing
     label: Product owners
     relationship: HAS_PRODUCT_OWNER
-    description: The product owner of the team
+    description: The product owner of the team.
     hasMany: true
     fieldset: people
   parentGroup:
@@ -83,14 +83,14 @@ properties:
     direction: incoming
     label: FT Group Parent
     relationship: HAS_TEAM
-    description: The group this team is a direct child of (indirect children - sub-teams - are defined by using the Parent Team field)
+    description: The group this team is a direct child of (indirect children - sub-teams - are defined by using the Parent Team field).
     fieldset: organisation
   group:
     type: Group
     direction: incoming
     label: Associated Group
     relationship: HAS_TEAM
-    description: The group that owns the team (either as a direct report or a sub-team)
+    description: The group that owns the team (either as a direct report or a sub-team).
     isRecursive: true
     fieldset: organisation
   subTeams:
@@ -98,7 +98,7 @@ properties:
     direction: outgoing
     label: Sub-teams
     relationship: HAS_TEAM
-    description: This team's subteams
+    description: This team's subteams.
     hasMany: true
     fieldset: organisation
   parentTeam:
@@ -106,14 +106,14 @@ properties:
     direction: incoming
     label: Parent team
     relationship: HAS_TEAM
-    description: The team this team is a subteam of (direct children of a FT Group and defined by using the FT Group Parent field)
+    description: The team this team is a subteam of (direct children of a FT Group and defined by using the FT Group Parent field).
     fieldset: organisation
   delivers:
     type: System
     direction: incoming
     label: Delivers systems
     relationship: DELIVERED_BY
-    description: The systems the team delivers
+    description: The systems the team delivers.
     hasMany: true
     fieldset: ownership
   supports:
@@ -121,7 +121,7 @@ properties:
     direction: incoming
     label: Supports systems
     relationship: SUPPORTED_BY
-    description: The systems the team supports
+    description: The systems the team supports.
     hasMany: true
     fieldset: ownership
   teamMembers:
@@ -129,7 +129,7 @@ properties:
     direction: outgoing
     label: Team members
     relationship: HAS_TEAM_MEMBER
-    description: The people who make up this team
+    description: The people who make up this team.
     hasMany: true
     fieldset: people
 fieldsets:
