--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -7,11 +7,11 @@ CircleCiVersion:
 Capability:
   description: The means by which a technique is delivered
   options:
-    - Fully Automated
-    - Manually Triggered Script
-    - Manual, No automation
-    - Not Defined
-    - Not Required
+    - Fully_Automated
+    - Manually_Triggered_Script
+    - Manual_No_Automation
+    - Not_Defined
+    - Not_Required
 SystemLifecycle:
   description: |
     The lifecycle stage of a system.
