--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -1,6 +1,6 @@
 name: Person
 pluralName: People
-description: A individual within the organisation who is contactable
+description: An FT staff member or a contact at a relevant third party. For FT staff, details are imported daily from https://who.in.ft.com, so there should be no need to manually add or update
 rank: 40
 properties:
   code:
@@ -10,7 +10,9 @@ properties:
     canIdentify: true
     isCore: true
     label: Code
-    description: 'Unique code/id for this person'
+    description: |
+        Unique code/id for this person. For FT staff this will be their active directory name.
+        For third parties, use firstname.lastname.company
     fieldset: general
     autoPopulated: true
   name:
@@ -18,7 +20,9 @@ properties:
     canIdentify: true
     isCore: true
     label: Name
-    description: The name of the person
+    description: |
+        The name of the person.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: general
     autoPopulated: true
   email:
@@ -26,7 +30,9 @@ properties:
     canIdentify: true
     isCore: true
     label: Email
-    description: The email address of the person
+    description: |
+        The email address of the person.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: contact
     autoPopulated: true
   slack:
@@ -34,21 +40,27 @@ properties:
     label: Slack
     canIdentify: true
     isCore: true
-    description: The slack link for the person (deprecated)
+    description: |
+        The slack link for the person (deprecated).
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: contact
     autoPopulated: true
   slackName:
     type: Word
     canIdentify: true
     label: Slack Name
-    description: The slack name for the person
+    description: |
+        The slack name for the person.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: contact
     autoPopulated: true
   slackID:
     type: Word
     canIdentify: true
     label: Slack ID
-    description: The slack id for the person
+    description: |
+        The slack id for the person.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: contact
     autoPopulated: true
   phone:
@@ -56,26 +68,34 @@ properties:
     canIdentify: true
     isCore: true
     label: Phone
-    description: The phone contact number for the person
+    description: |
+        The phone contact number for the person.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: contact
     autoPopulated: true
   isActive:
     type: Boolean
     canFilter: true
     label: Active
-    description: Whether or not the person is still working at the FT
+    description: |
+        Whether or not the person is still working at the FT.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: general
   contract:
     type: PersonContract
     canFilter: true
     label: Contract type
-    description: The type of employment contract a Person has with the FT
+    description: |
+        The type of employment contract a Person has with the FT.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     fieldset: general
   isPeopleApi:
     type: Boolean
     canFilter: true
     label: Active
-    description: Whether or not the person is still working at the FT
+    description: |
+        Whether or not the person is still working at the FT.
+        For FT staff, if details are incorrect please raise in the \#ip-people-api slack channel
     autoPopulated: true
   source:
     type: PersonSource
